--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
-﻿@using TesteMvc
-@using TesteMvc.Models
+﻿@using PrimeiraApp
+@using PrimeiraApp.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper "*, PrimeiraApp"
